gccida/c3/peephole2_insns
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59277:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v164; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59284:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v171; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59291:1: error: must use 'enum' tag to refer to type 'processor_type'
processor_type v178; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59382:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59385:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59433:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1291( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59451:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1290( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59461:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1295( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59471:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1296( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59477:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1297( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59519:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1276( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59539:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1275( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59551:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1280( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59567:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1281( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59573:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1282( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59588:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v63; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59592:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = ( rtx)v232; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59594:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( v233, recog_data_0.operand[0]) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/insn-recog.c:59599:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v234; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peephole2_insns/src/obj/insn-recog.o] Error 1
